--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/review/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/review/index.html
@@ -7,7 +7,7 @@
     <style type="text/css">
       #player-container {clear:both; border:none; width:90%; height:300;}
       #edit-link {float:right;margin-top:3px; margin-bottom:5px; margin-right:50px;}
-      .hidden-initialy {display:none;}
+      .hidden {display:none;}
     </style>
     <script type="text/javascript" src="../../../admin/jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript">
