MH-4647 - slide tooltip embed player
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7936 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
+++ b/modules/matterhorn-engage-ui/src/main/resources/ui/embed.html
@@ -111,6 +111,7 @@
 
     <div id="data"></div>
 
+    <div id="segment-tooltip" class="segment-tooltip" style="display: none;"></div>
 
   </body>
   
