--- a/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
+++ b/modules/matterhorn-conductor/src/main/resources/ui/operation/caption/index.html
@@ -1,16 +1,72 @@
 <html>
   <head>
-    <title>Hold for caption upload</title>
+    <title>Hold for review</title>
     <link rel="stylesheet" type="text/css" href="../../../admin/infusion-1.1.2/fss/css/fss-reset.css">
     <link rel="stylesheet" type="text/css" href="../../../admin/infusion-1.1.2/fss/css/fss-layout.css">
     <link rel="stylesheet" type="text/css" href="../../../admin/css/admin.css">
     <style type="text/css">
       #player-container {clear:both; border:none; width:90%; height:300;}
       #edit-link {float:right;margin-top:3px; margin-bottom:5px; margin-right:50px;}
-      .hidden-initialy {display:none;}
+      .hidden {display:none;}
+      #loading-container {
+        width:225px;
+        height:20px;
+        background-image: url(../../../admin/shared_img/loading.gif);
+        background-repeat: no-repeat;
+      }
+      .spandiv {display:table-cell;float:left;}
     </style>
     <script type="text/javascript" src="../../../admin/jquery/jquery-1.4.2.min.js"></script>
     <script type="text/javascript">
+
+      var PLAYER_URL = '../../../engage/ui/embed.html';
+      var currentFile = null;
+      
+      // Captions upload
+      var UploadListener = {};
+      UploadListener.filename = null;
+      UploadListener.mediaPackage = '';
+      UploadListener.flavor = 'captions/timedtext';
+      UploadListener.startUpload = function() {
+        if (UploadListener.filename != null) {
+          $('#upload-container').css('display','none');
+          $('#loading-container').css('display','table-cell');
+          var uploadFrame = document.getElementById("filechooser-ajax");
+          uploadFrame.contentWindow.document.uploadForm.flavor.value = UploadListener.flavor;
+          uploadFrame.contentWindow.document.uploadForm.mediaPackage.value = UploadListener.mediaPackage;
+          uploadFrame.contentWindow.document.uploadForm.elementType.value = 'catalog';
+          uploadFrame.contentWindow.document.uploadForm.submit();
+        }
+      }
+      UploadListener.fileSelectedAjax = function(filename, jobId) {
+        UploadListener.filename = filename;
+      }
+      UploadListener.uploadComplete = function () {
+        $('#file-upload-container').css('display','none');
+        $('#file-display-container').removeClass('hidden');
+        $('#filename-container').text(UploadListener.filename);
+        var uploadFrame = document.getElementById("filechooser-ajax");
+        var mp = uploadFrame.contentWindow.document.getElementById("mp").value;
+        parent.Recordings.changedMediaPackage = mp;
+        //alert(mp);
+      }
+      UploadListener.uploadFailed = function() {
+        $('#loading-container').css('display','none');
+        $('#upload-container').css('display','table-cell');
+        $('#filechooser-ajax').attr('src','../../../ingest/rest/filechooser-local.html');
+        alert('The captions file could not be added');
+      }
+
+      function xmlToString(doc) {
+        if(typeof XMLSerializer != 'undefined'){
+          return (new XMLSerializer()).serializeToString(doc);
+        } else if(doc.xml) {
+          return doc.xml;
+        } else {
+          return '';
+        }
+      }
+
       $(document).ready(function() {
         var id = parent.document.getElementById("holdWorkflowId").value;
         // Event edit link clicked
@@ -22,11 +78,13 @@
         // load preview player and metadata
         $.ajax({
           url : '../../../workflow/rest/instance/' + id + '.xml',
-          dataType : 'xml',    // or XML..
-          success : function(data) {    
+          dataType : 'xml',    
+          success : function(data) {
+            // put mediapackge into form (for upload of captions file)
+            var mp = xmlToString(data).match(/<mediapackage(.*)mediapackage>/)[0];
+            UploadListener.mediaPackage = mp;
             // load metadata
             var catalogUrl = $(data.documentElement).find("mediapackage > metadata > catalog[type='dublincore/episode'] > url").text();
-            catalogUrl += '/dublincore.xml';    // FIXME workaround MH-3993
             $.ajax({
               url : catalogUrl,
               dataType: 'xml',
@@ -34,7 +92,6 @@
               success: function(data) {
                 $(data.documentElement).children().each(function(index, elm) {
                   var tagName = elm.tagName.split(/:/)[1];
-                  //alert(tagName);
                   if ($(elm).text() != '') {
                     $('#container-'+tagName).css('display','block');
                     var text = $('#meta-'+tagName).text();
@@ -48,21 +105,42 @@
                 parent.Recordings.adjustHoldActionPanelHeight();
               }
             });
-            // get neccessary data to call the preview player
-            var previewTag = $(data.documentElement).find("mediapackage > media > track > tags > tag:contains('preview')").first();
-            if (previewTag != null) {
-              var videoUrl = $(previewTag).parent().parent().find('url').text();
-              //alert("videoUrl: " + videoUrl);
-              //$('#video-url-container').attr('href',videoUrl).text(videoUrl);
-              var url = '../../../engage/ui/preview.html?videoUrl=' + videoUrl;
+            // look for already uploaded captions file
+            $(data.documentElement).find("mediapackage > metadata > catalog").each(function(index, elm) {
+              if ($(elm).attr('type') == 'captions/timedtext') {
+                var captionsFile = $(elm).find('url').text().split(/\//);
+                currentFile = captionsFile;
+                captionsFile = captionsFile[captionsFile.length-1];
+                $('#file-upload-container').css('display','none');
+                $('#file-display-container').css('display','table-cell');
+                $('#filename-container').text(captionsFile);
+              }
+            });
+            // call preview player
+            var previewFiles = new Array();
+            $(data.documentElement).find("mediapackage > media > track").each(function(index, elm) {
+              if ($(elm).attr('type').split(/\//)[1] == 'preview') {
+                previewFiles.push($(elm).find('url').text());
+              }
+            });
+            if (previewFiles.length > 0) {
+              var url = PLAYER_URL + '?';
+              for (var i = 0; i < previewFiles.length; i++) {
+                if (i == 0) {
+                  url += 'videoUrl=';
+                } else {
+                  url += '&videoUrl' + (i+1) + '=';
+                }
+                url += previewFiles[i];
+              }
               $('#player-container').attr('src', url);
             } else {
-              $('#player-container').text('No preview encoded track found in MediaPackage');
+              $('#player-container').text("No preview media files found for this media package.");
             }
             // show links to source media
             var singleFile = true;
             $(data.documentElement).find("mediapackage > media > track").each(function(index, elm) {
-              if (($(elm).attr('type').split(/\//)[1] == 'source') && ($(elm).find("tags > tag:contains('preview')").empty())) {
+              if ($(elm).attr('type').split(/\//)[1] == 'source') {
                 var link = document.createElement('a');
                 var url = $(elm).find('url').text();
                 $(link).attr('href', url);
@@ -83,16 +161,29 @@
   </head>
   <body>
     <!-- control buttons in the upper right -->
-    <a href="javascript: return false;" id="edit-link">Edit before continuing</a>
+    <div class="spandiv">
+      <h1>Upload Captions file</h1>
+    </div>
+    <div id="file-display-container" class="spandiv hidden" style="padding-top:26px;padding-left:40px;">
+      <div class="spandiv" id="i18n_captions_upload_label">Captions file:&nbsp;</div>
+      <div id="filename-container" class="spandiv"></div>
+    </div>
+    <div id="file-upload-container" class="spandiv" style="padding-top:26px;padding-left:40px;">
+      <div id="i18n_captions_upload_label" class="spandiv">Captions file to upload:&nbsp;</div>
+      <div id="loading-container" class="spandiv hidden"></div>
+      <div id="upload-container" style="display:table-cell;float:left;">
+        <iframe name="filechooserAjax" id="filechooser-ajax" frameborder="0" scrolling="no" src="../../../ingest/rest/filechooser-local.html" style="float:left;height:30px;width:400px;padding:0px;overflow:hidden;border:none;">
+        </iframe>
+        <button type="button" id="btn-start-upload" onclick="UploadListener.startUpload();">Upload</button>
+      </div>
+    </div>
+    <!-- <a href="javascript: return false;" id="edit-link">Edit before continuing</a> -->
     <center>
       <iframe id="player-container"></iframe>
     </center>
-    <center>
-      <!-- span>Video URL:<a id="video-url-container" href=""></a></span>
-      <br -->
-    </center>
     <div id="metadata-container">
       <ul class="no-bullets formField-list fl-controls-right">
+        <!-- captions files upload -->
         <!-- field: File -->
         <li class="ui-helper-clearfix">
           <label class="fl-label"><span id="i18n_files_label">File(s)</span>:</label>
